Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32382

FederatedX error on pushdown of statements having CTE

    XMLWordPrintable

Details

    Description

      --source include/master-slave.inc
       
      connection slave; 
      CREATE TABLE t1 (id int);
      INSERT INTO t1 VALUES (1),(2),(3);
       
      connection master;
      INSTALL SONAME 'ha_federatedx';
      set global federated_pushdown=1;
       
      --replace_result $SLAVE_MYPORT SLAVE_PORT
      eval CREATE TABLE t1 ENGINE="FEDERATED" CONNECTION="mysql://root@127.0.0.1:$SLAVE_MYPORT/test/t1";
       
      with cte as (select * from t1) select * from cte;
      

      mysqltest: At line 15: query 'with cte as (select * from t1) select * from cte' failed: ER_GET_ERRNO (1030): Got error 10000 "Unknown error 10000" from storage engine FEDERATED

      Attachments

        Activity

          People

            oleg.smirnov Oleg Smirnov
            oleg.smirnov Oleg Smirnov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 5h
                5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.